--- a/01-habitat-suitability-soil.ipynb
+++ b/01-habitat-suitability-soil.ipynb
@@ -117,7 +117,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x23106d60b90>"
+       "<matplotlib.collections.QuadMesh at 0x1c70f255250>"
       ]
      },
      "execution_count": 3,
@@ -306,7 +306,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x23106c9a4d0>"
+       "<matplotlib.collections.QuadMesh at 0x1c710c150d0>"
       ]
      },
      "execution_count": 5,
@@ -429,22 +429,6 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "[(np.float64(-96.1692345765796),\n",
-       "  np.float64(33.38543577462093),\n",
-       "  np.float64(-95.85492673757102),\n",
-       "  np.float64(33.80186198772292)),\n",
-       " (np.float64(-97.46881033436894),\n",
-       "  np.float64(46.0953431579286),\n",
-       "  np.float64(-96.93854828332353),\n",
-       "  np.float64(46.57204154162918))]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -501,17 +485,45 @@
     {
      "data": {
       "text/plain": [
+       "'http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat{min_lat}{max_lat}_lon{min_lon}{max_lon}.tif'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Caddo Bounds\n",
+      "-97 33\n",
+      "-96 33\n",
+      "Sheyenne Bounds\n",
+      "-98 46\n",
+      "-97 46\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\riede\\AppData\\Local\\Temp\\ipykernel_34428\\397394450.py:35: FutureWarning: Calling float on a single element Series is deprecated and will raise a TypeError in the future. Use float(ser.iloc[0]) instead\n",
+      "  for min_lon in range(floor(site_bounds_df.min_lon), ceil(site_bounds_df.max_lon)):\n",
+      "C:\\Users\\riede\\AppData\\Local\\Temp\\ipykernel_34428\\397394450.py:36: FutureWarning: Calling float on a single element Series is deprecated and will raise a TypeError in the future. Use float(ser.iloc[0]) instead\n",
+      "  for min_lat in range(floor(site_bounds_df.min_lat), ceil(site_bounds_df.max_lat)):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
        "['http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat3334_lon-97-96.tif',\n",
        " 'http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat3334_lon-96-95.tif',\n",
-       " 'http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat4647_lon-98-97.tif',\n",
-       " 'http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat4647_lon-97-96.tif',\n",
        " 'http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat4647_lon-98-97.tif',\n",
        " 'http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat4647_lon-97-96.tif']"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -530,40 +542,238 @@
     "    .total_bounds)\n",
     "    bounds.append((bounds_min_lon, bounds_min_lat, bounds_max_lon, bounds_max_lat))\n",
     "    \n",
-    "# Try doing bound loop and soil_urls loop separate?\n",
-    "\n",
-    "    bounds_df = pd.DataFrame(bounds).rename(\n",
-    "        index={0: 'Caddo Bounds', 1: 'Sheyenne Bounds'},\n",
-    "        columns={0: 'min_lon', 1: 'min_lat', 2: 'max_lon', 3: 'max_lat'})\n",
-    "    \n",
-    "\n",
-    "    #  Define the Caddo download URL template for the soil data\n",
-    "    soil_url_template = (\"http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/\"\n",
-    "                \"v1.0\"\n",
-    "                \"/ph\"\n",
-    "                \"/mean\"\n",
-    "                \"/60_100\"\n",
-    "                \"/lat{min_lat}{max_lat}_lon{min_lon}{max_lon}.tif\")\n",
-    "    #display(soil_url_template)\n",
-    "\n",
-    "    #soil_urls = []\n",
-    "    for i in bounds_df.groupby(level=0):\n",
-    "        #print(i)\n",
-    "        for min_lon in range(floor(bounds_min_lon), ceil(bounds_max_lon)):\n",
-    "            for min_lat in range(floor(bounds_min_lat), ceil(bounds_max_lat)):\n",
-    "                soil_url = soil_url_template.format(\n",
-    "                    min_lat=min_lat, max_lat=min_lat+1,\n",
-    "                    min_lon=min_lon, max_lon=min_lon+1)\n",
-    "                soil_urls.append(soil_url)\n",
-    "    #display(soil_urls)\n",
-    "display(bounds)\n",
+    "bounds_df = pd.DataFrame(bounds).rename(\n",
+    "    index={0: 'Caddo Bounds', 1: 'Sheyenne Bounds'},\n",
+    "    columns={0: 'min_lon', 1: 'min_lat', 2: 'max_lon', 3: 'max_lat'})\n",
     "display(bounds_df)\n",
-    "soil_urls"
+    "\n",
+    "#  Define the Caddo download URL template for the soil data\n",
+    "soil_url_template = (\"http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/\"\n",
+    "            \"v1.0\"\n",
+    "            \"/ph\"\n",
+    "            \"/mean\"\n",
+    "            \"/60_100\"\n",
+    "            \"/lat{min_lat}{max_lat}_lon{min_lon}{max_lon}.tif\")\n",
+    "display(soil_url_template)\n",
+    "\n",
+    "# Maybe turn soil_urls into a dictionary and instead of appending in line 40 add results to dictionary\n",
+    "# Check notebook 92 from redlining code\n",
+    "soil_urls = []\n",
+    "for site_name, site_bounds_df in bounds_df.groupby(level=0):\n",
+    "    print(site_name)\n",
+    "    for min_lon in range(floor(site_bounds_df.min_lon), ceil(site_bounds_df.max_lon)):\n",
+    "        for min_lat in range(floor(site_bounds_df.min_lat), ceil(site_bounds_df.max_lat)):\n",
+    "            print(min_lon, min_lat)\n",
+    "            soil_url = soil_url_template.format(\n",
+    "                min_lat=min_lat, max_lat=min_lat+1,\n",
+    "                min_lon=min_lon, max_lon=min_lon+1)\n",
+    "            soil_urls.append(soil_url)\n",
+    "display(soil_urls)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(np.float64(-96.1692345765796),\n",
+       "  np.float64(33.38543577462093),\n",
+       "  np.float64(-95.85492673757102),\n",
+       "  np.float64(33.80186198772292)),\n",
+       " (np.float64(-97.46881033436894),\n",
+       "  np.float64(46.0953431579286),\n",
+       "  np.float64(-96.93854828332353),\n",
+       "  np.float64(46.57204154162918))]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bounds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(np.float64(-96.1692345765796), np.float64(33.38543577462093), np.float64(-95.85492673757102), np.float64(33.80186198772292))\n",
+      "(np.float64(-97.46881033436894), np.float64(46.0953431579286), np.float64(-96.93854828332353), np.float64(46.57204154162918))\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in bounds:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Caddo1': 'http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat3334_lon-97-96.tif',\n",
+       " 'Caddo2': 'http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat3334_lon-96-95.tif',\n",
+       " 'Sheyenne1': 'http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat4647_lon-98-97.tif',\n",
+       " 'Sheyenne2': 'http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat4647_lon-97-96.tif'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keys = ['Caddo1', 'Caddo2', 'Sheyenne1', 'Sheyenne2']\n",
+    "\n",
+    "output = {}\n",
+    "for key, value in zip(keys, soil_urls):\n",
+    "    output[key] = value\n",
+    "\n",
+    "output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(np.float64(-96.1692345765796),\n",
+       "  np.float64(33.38543577462093),\n",
+       "  np.float64(-95.85492673757102),\n",
+       "  np.float64(33.80186198772292)),\n",
+       " (np.float64(-97.46881033436894),\n",
+       "  np.float64(46.0953431579286),\n",
+       "  np.float64(-96.93854828332353),\n",
+       "  np.float64(46.57204154162918))]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bounds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat3334_lon-97-96.tif\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OPENED\n",
+      "http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat3334_lon-96-95.tif\n",
+      "OPENED\n",
+      "http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat4647_lon-98-97.tif\n",
+      "OPENED\n",
+      "http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat4647_lon-97-96.tif\n",
+      "OPENED\n",
+      "(np.float64(-96.1692345765796), np.float64(33.38543577462093), np.float64(-95.85492673757102), np.float64(33.80186198772292))\n",
+      "(np.float64(-97.46881033436894), np.float64(46.0953431579286), np.float64(-96.93854828332353), np.float64(46.57204154162918))\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_soil_das = []\n",
+    "# Loop through each of the soil files\n",
+    "for url in soil_urls:\n",
+    "    print(url)\n",
+    "    # Download raster data\n",
+    "\n",
+    "    # Unzip the raster data\n",
+    "\n",
+    "    # Extract metadata from the file name\n",
+    "\n",
+    "    # Only download once -- Save raster data to the disk\n",
+    "\n",
+    "    # Load the raster data into Python, mask and scale and squeeze w/ .tif files\n",
+    "    soil_da = rxr.open_rasterio(\n",
+    "        url,\n",
+    "        mask_and_scale=True\n",
+    "        ).squeeze()\n",
+    "    print('OPENED')\n",
+    "    # sheyenne_das.append(soil_da)\n",
+    "    # Make sure that the CRS matches between the vector and raster data, this could also be done up above the output_da_list is defined\n",
+    "\n",
+    "# Crop the raster data\n",
+    "for bounds in bounds:\n",
+    "    print(bounds)\n",
+    "    # cropped_da = soil_da.rio.clip_box(*caddo_bounds)\n",
+    "    # all_soil_das.append(cropped_da)\n",
+    "    # print('CROPPED')\n",
+    "\n",
+    "# caddo_bounds is a data array\n",
+    "# caddo_bounds = c_bounds_min_lon, c_bounds_min_lat, c_bounds_max_lon, c_bounds_max_lat = (\n",
+    "#     caddo_grasslands_gdf\n",
+    "#     #.to_crs(ccrs.UTM(zone=14))\n",
+    "#     .total_bounds)\n",
+    "# display(caddo_bounds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expression expected after dictionary key and ':' (2662134095.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[13], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    'Caddo Soil URL':,\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m expression expected after dictionary key and ':'\n"
+     ]
+    }
+   ],
+   "source": [
+    "soil_url_dict = {\n",
+    "    'Caddo Soil URL':,\n",
+    "    'Sheyenne Soil URL:'\n",
+    "}\n",
+    "\n",
+    "test_dict = {band_name: [] for band_name in bands.keys()}\n",
+    "test_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_dict[band_name]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
