used 00 to try to figure out only downloading once for climate data

--- a/00-habitat-suitability-grasslands.ipynb
+++ b/00-habitat-suitability-grasslands.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        "'C:\\\\Users\\\\riede\\\\earth-analytics\\\\data\\\\habitat-suitability'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,9 +63,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\riede\\earth-analytics\\data\\habitat-suitability\\grasslands_dir\\S_USA.NationalGrassland.shp\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -356,7 +363,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
