added original sheyenne soil loop here for safe keeping

--- a/function-practice.ipynb
+++ b/function-practice.ipynb
@@ -337,6 +337,74 @@
     "    results_step3_dict[site] = results_step2_dict[site] / 3\n",
     "results_step3_dict"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OG LOOOOOOP\n",
+    "#  Define Sheyenne bounds\n",
+    "sheyenne_bounds = s_bounds_min_lon, s_bounds_min_lat, s_bounds_max_lon, s_bounds_max_lat = (\n",
+    "    sheyenne_grasslands_gdf\n",
+    "    #.to_crs(ccrs.UTM(zone=14))\n",
+    "    .total_bounds)\n",
+    "display(sheyenne_bounds)\n",
+    "\n",
+    "#  Define the sheyenne download URL template for the soil data\n",
+    "sheyenne_soil_template_url = (\"http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/\"\n",
+    "            \"v1.0\"\n",
+    "            \"/ph\"\n",
+    "            \"/mean\"\n",
+    "            \"/60_100\"\n",
+    "            \"/lat4647_lon{min_lon}{max_lon}.tif\")\n",
+    "display(sheyenne_soil_template_url)\n",
+    "\n",
+    "# List out all the Sheyenne soil files we will need to download\n",
+    "sheyenne_soil_url_list = []\n",
+    "for min_lon in range(floor(s_bounds_min_lon), ceil(s_bounds_max_lon)):\n",
+    "    for min_lat in range(floor(s_bounds_min_lat), ceil(s_bounds_max_lat)):\n",
+    "        max_lon = min_lon + 1\n",
+    "        soil_url = sheyenne_soil_template_url.format(\n",
+    "            min_lon=min_lon,\n",
+    "            max_lon=max_lon)\n",
+    "        sheyenne_soil_url_list.append(soil_url)\n",
+    "display(sheyenne_soil_url_list)\n",
+    "\n",
+    "sheyenne_das = []\n",
+    "# Loop through each of the soil files\n",
+    "for i in sheyenne_soil_url_list:\n",
+    "    # Only download once -- Save raster data to the disk\n",
+    "    soil_path = os.path.join(sheyenne_soil_dir, f\"soil_lat4647_lon{min_lon}{max_lon}.tif\")\n",
+    "    print(soil_path)\n",
+    "\n",
+    "    if not os.path.exists(soil_path):\n",
+    "        # Load the raster data into Python, mask and scale and squeeze w/ .tif files\n",
+    "        soil_da = rxr.open_rasterio(\n",
+    "            i,\n",
+    "            mask_and_scale=True\n",
+    "            ).squeeze()\n",
+    "        soil_da.to_netcdf(soil_path)\n",
+    "        print('OPENED')\n",
+    "\n",
+    "    # Open and squeeze data set\n",
+    "    soil_da = rxr.open_rasterio(\n",
+    "    i,\n",
+    "    mask_and_scale=True\n",
+    "    ).squeeze()\n",
+    "\n",
+    "    # Crop the raster data\n",
+    "    cropped_da = soil_da.rio.clip_box(*sheyenne_bounds)\n",
+    "    sheyenne_das.append(cropped_da)\n",
+    "    print('CROPPED')\n",
+    "\n",
+    "display(sheyenne_das)\n",
+    "\n",
+    "# Merge tiles\n",
+    "sheyenne_merged_das = merge_arrays(sheyenne_das)\n",
+    "sheyenne_merged_das.plot()"
+   ]
   }
  ],
  "metadata": {
