--- a/01-habitat-suitability-soil.ipynb
+++ b/01-habitat-suitability-soil.ipynb
@@ -138,7 +138,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x15ea2685c10>"
+       "<matplotlib.collections.QuadMesh at 0x1dc95563f50>"
       ]
      },
      "execution_count": 4,
