got caddo "only download once" to work

--- a/01-habitat-suitability-soil.ipynb
+++ b/01-habitat-suitability-soil.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "'C:\\\\Users\\\\riede\\\\earth-analytics\\\\data\\\\habitat-suitability\\\\sheyenne-soil-ph\\\\*.tif'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -99,13 +99,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Path: C:\\Users\\riede\\earth-analytics\\data\\habitat-suitability\\sheyenne-soil-ph\\soil_lat4647_lon-98_-97.tif\n",
-      "file already exists: C:\\Users\\riede\\earth-analytics\\data\\habitat-suitability\\sheyenne-soil-ph\\soil_lat4647_lon-98_-97.tif\n",
-      "OPENED\n",
+      "Path: C:\\Users\\riede\\earth-analytics\\data\\habitat-suitability\\sheyenne-soil-ph\\soil_lat4647_lon-98-97.tif\n",
       "CROPPED\n",
-      "Path: C:\\Users\\riede\\earth-analytics\\data\\habitat-suitability\\sheyenne-soil-ph\\soil_lat4647_lon-97_-96.tif\n",
-      "file already exists: C:\\Users\\riede\\earth-analytics\\data\\habitat-suitability\\sheyenne-soil-ph\\soil_lat4647_lon-97_-96.tif\n",
-      "OPENED\n",
+      "Path: C:\\Users\\riede\\earth-analytics\\data\\habitat-suitability\\sheyenne-soil-ph\\soil_lat4647_lon-97-96.tif\n",
       "CROPPED\n"
      ]
     },
@@ -138,10 +134,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x1dc95563f50>"
+       "<matplotlib.collections.QuadMesh at 0x288039ad650>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -158,10 +154,11 @@
    ],
    "source": [
     "# Define Sheyenne bounds\n",
-    "sheyenne_bounds = s_bounds_min_lon, s_bounds_min_lat, s_bounds_max_lon, s_bounds_max_lat = (\n",
-    "    sheyenne_grasslands_gdf\n",
-    "    #.to_crs(ccrs.UTM(zone=14))\n",
-    "    .total_bounds)\n",
+    "sheyenne_bounds = (sheyenne_bounds_min_lon, sheyenne_bounds_min_lat,\n",
+    "                   sheyenne_bounds_max_lon, sheyenne_bounds_max_lat) = (\n",
+    "                       sheyenne_grasslands_gdf\n",
+    "                       .total_bounds)\n",
+    "\n",
     "display(sheyenne_bounds)\n",
     "\n",
     "#  Define the sheyenne download URL template for the soil data\n",
@@ -175,14 +172,14 @@
     "\n",
     "# List out all the Sheyenne soil files we will need to download\n",
     "sheyenne_das = []\n",
-    "for min_lon in range(floor(s_bounds_min_lon), ceil(s_bounds_max_lon)):\n",
-    "    for min_lat in range(floor(s_bounds_min_lat), ceil(s_bounds_max_lat)):\n",
+    "for min_lon in range(floor(sheyenne_bounds_min_lon), ceil(sheyenne_bounds_max_lon)):\n",
+    "    for min_lat in range(floor(sheyenne_bounds_min_lat), ceil(sheyenne_bounds_max_lat)):\n",
     "        max_lon = min_lon + 1\n",
     "        soil_url = sheyenne_soil_template_url.format(\n",
     "            min_lon=min_lon,\n",
     "            max_lon=max_lon)\n",
-    "         # Define the file path for saving the downloaded raster data\n",
-    "        soil_path = os.path.join(sheyenne_soil_dir, f\"soil_lat4647_lon{min_lon}_{max_lon}.tif\")\n",
+    "        # Define the file path for saving the downloaded raster data\n",
+    "        soil_path = os.path.join(sheyenne_soil_dir, f\"soil_lat4647_lon{min_lon}{max_lon}.tif\")\n",
     "        print(f\"Path: {soil_path}\")\n",
     "\n",
     "        if not os.path.exists(soil_path):\n",
@@ -216,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +222,7 @@
        "<Axes: title={'center': 'band = 1, spatial_ref = 0'}, xlabel='x', ylabel='y'>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -256,7 +253,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\riede\\\\earth-analytics\\\\data\\\\habitat-suitability\\\\caddo-soil-ph\\\\*.tif'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define data directory for the Caddo soil data\n",
+    "caddo_soil_dir = os.path.join(data_dir, 'caddo-soil-ph')\n",
+    "\n",
+    "os.makedirs(caddo_soil_dir, exist_ok=True)\n",
+    "\n",
+    "caddo_soil_pattern = os.path.join (caddo_soil_dir, '*.tif')\n",
+    "caddo_soil_pattern"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -278,21 +301,15 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "text/plain": [
-       "['http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat3334_lon-97-96.tif',\n",
-       " 'http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat3334_lon-96-95.tif']"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Path: C:\\Users\\riede\\earth-analytics\\data\\habitat-suitability\\caddo-soil-ph\\soil_lat3334_lon-97-96.tif\n",
+      "file already exists: C:\\Users\\riede\\earth-analytics\\data\\habitat-suitability\\caddo-soil-ph\\soil_lat3334_lon-97-96.tif\n",
       "OPENED\n",
       "CROPPED\n",
+      "Path: C:\\Users\\riede\\earth-analytics\\data\\habitat-suitability\\caddo-soil-ph\\soil_lat3334_lon-96-95.tif\n",
+      "file already exists: C:\\Users\\riede\\earth-analytics\\data\\habitat-suitability\\caddo-soil-ph\\soil_lat3334_lon-96-95.tif\n",
       "OPENED\n",
       "CROPPED\n"
      ]
@@ -326,10 +343,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x1b300156d90>"
+       "<matplotlib.collections.QuadMesh at 0x288034bb550>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -346,10 +363,11 @@
    ],
    "source": [
     "# Define Caddo bounds\n",
-    "caddo_bounds = c_bounds_min_lon, c_bounds_min_lat, c_bounds_max_lon, c_bounds_max_lat = (\n",
-    "    caddo_grasslands_gdf\n",
-    "    #.to_crs(ccrs.UTM(zone=14))\n",
-    "    .total_bounds)\n",
+    "caddo_bounds = (caddo_bounds_min_lon, caddo_bounds_min_lat,\n",
+    "                caddo_bounds_max_lon, caddo_bounds_max_lat) = (\n",
+    "                       caddo_grasslands_gdf\n",
+    "                       .total_bounds)\n",
+    "\n",
     "display(caddo_bounds)\n",
     "\n",
     "#  Define the Caddo download URL template for the soil data\n",
@@ -362,49 +380,49 @@
     "display(caddo_soil_template_url)\n",
     "\n",
     "# List out all the Caddo soil files we will need to download\n",
-    "caddo_soil_url_list = []\n",
-    "for min_lon in range(floor(c_bounds_min_lon), ceil(c_bounds_max_lon)):\n",
-    "    for min_lat in range(floor(c_bounds_min_lat), ceil(c_bounds_max_lat)):\n",
-    "        soil_url = caddo_soil_template_url.format(\n",
-    "            min_lon=min_lon, max_lon=min_lon+1)\n",
-    "        caddo_soil_url_list.append(soil_url)\n",
-    "display(caddo_soil_url_list)\n",
-    "\n",
     "caddo_das = []\n",
-    "# Loop through each of the soil files\n",
-    "for i in caddo_soil_url_list:\n",
-    "    # Download raster data\n",
+    "for min_lon in range(floor(caddo_bounds_min_lon), ceil(caddo_bounds_max_lon)):\n",
+    "    for min_lat in range(floor(caddo_bounds_min_lat), ceil(caddo_bounds_max_lat)):\n",
+    "        max_lon = min_lon + 1\n",
+    "        soil_url = caddo_soil_template_url.format(\n",
+    "            min_lon=min_lon,\n",
+    "            max_lon=max_lon)\n",
+    "        # Define the file path for saving the downloaded raster data\n",
+    "        soil_path = os.path.join(caddo_soil_dir, f\"soil_lat3334_lon{min_lon}{max_lon}.tif\")\n",
+    "        print(f\"Path: {soil_path}\")\n",
     "\n",
-    "    # Unzip the raster data\n",
+    "        if not os.path.exists(soil_path):\n",
+    "            # Load the raster data into Python, mask and scale and squeeze w/ .tif files\n",
+    "            soil_da = rxr.open_rasterio(\n",
+    "                soil_url,\n",
+    "                mask_and_scale=True\n",
+    "                ).squeeze()\n",
+    "            soil_da.to_netcdf(soil_path)\n",
+    "        else:\n",
+    "            print(f'file already exists: {soil_path}')\n",
+    "            print('OPENED')\n",
     "\n",
-    "    # Extract metadata from the file name\n",
-    "\n",
-    "    # Only download once -- Save raster data to the disk\n",
-    "\n",
-    "    # Load the raster data into Python, mask and scale and squeeze w/ .tif files\n",
-    "    soil_da = rxr.open_rasterio(\n",
-    "        i,\n",
-    "        mask_and_scale=True\n",
+    "        # Open and squeeze data set\n",
+    "        soil_da = rxr.open_rasterio(\n",
+    "            soil_url,\n",
+    "            mask_and_scale=True\n",
     "        ).squeeze()\n",
-    "    print('OPENED')\n",
-    "    # sheyenne_das.append(soil_da)\n",
-    "    # Make sure that the CRS matches between the vector and raster data, this could also be done up above the output_da_list is defined\n",
-    "    \n",
-    "    # Crop the raster data\n",
-    "    cropped_da = soil_da.rio.clip_box(*caddo_bounds)\n",
-    "    caddo_das.append(cropped_da)\n",
-    "    print('CROPPED')\n",
+    "\n",
+    "        # Crop the raster data\n",
+    "        cropped_da = soil_da.rio.clip_box(*caddo_bounds)\n",
+    "        caddo_das.append(cropped_da)\n",
+    "        print('CROPPED')\n",
     "\n",
     "display(caddo_das)\n",
     "\n",
     "# Merge tiles\n",
     "caddo_merged_das = merge_arrays(caddo_das)\n",
-    "caddo_merged_das.plot()"
+    "caddo_merged_das.plot()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +431,7 @@
        "<Axes: title={'center': 'band = 1, spatial_ref = 0'}, xlabel='x', ylabel='y'>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
