stored soil directories

--- a/01-habitat-suitability-soil.ipynb
+++ b/01-habitat-suitability-soil.ipynb
@@ -168,10 +168,9 @@
     "            \"/mean\"\n",
     "            \"/60_100\"\n",
     "            \"/lat4647_lon{min_lon}{max_lon}.tif\")\n",
-    "display(sheyenne_soil_template_url)\n",
     "\n",
     "# List out all the Sheyenne soil files we will need to download\n",
-    "sheyenne_das = []\n",
+    "sheyenne_ph_das = []\n",
     "for min_lon in range(floor(sheyenne_bounds_min_lon), ceil(sheyenne_bounds_max_lon)):\n",
     "    for min_lat in range(floor(sheyenne_bounds_min_lat), ceil(sheyenne_bounds_max_lat)):\n",
     "        max_lon = min_lon + 1\n",
@@ -180,7 +179,7 @@
     "            max_lon=max_lon)\n",
     "        # Define the file path for saving the downloaded raster data\n",
     "        soil_path = os.path.join(sheyenne_soil_dir, f\"soil_lat4647_lon{min_lon}{max_lon}.tif\")\n",
-    "        print(f\"Path: {soil_path}\")\n",
+    "        print(f\"Soil path: {soil_path}\")\n",
     "\n",
     "        if not os.path.exists(soil_path):\n",
     "            # Load the raster data into Python, mask and scale and squeeze w/ .tif files\n",
@@ -377,10 +376,9 @@
     "            \"/mean\"\n",
     "            \"/60_100\"\n",
     "            \"/lat3334_lon{min_lon}{max_lon}.tif\")\n",
-    "display(caddo_soil_template_url)\n",
     "\n",
     "# List out all the Caddo soil files we will need to download\n",
-    "caddo_das = []\n",
+    "caddo_ph_das = []\n",
     "for min_lon in range(floor(caddo_bounds_min_lon), ceil(caddo_bounds_max_lon)):\n",
     "    for min_lat in range(floor(caddo_bounds_min_lat), ceil(caddo_bounds_max_lat)):\n",
     "        max_lon = min_lon + 1\n",
@@ -389,7 +387,7 @@
     "            max_lon=max_lon)\n",
     "        # Define the file path for saving the downloaded raster data\n",
     "        soil_path = os.path.join(caddo_soil_dir, f\"soil_lat3334_lon{min_lon}{max_lon}.tif\")\n",
-    "        print(f\"Path: {soil_path}\")\n",
+    "        print(f\"Soil path: {soil_path}\")\n",
     "\n",
     "        if not os.path.exists(soil_path):\n",
     "            # Load the raster data into Python, mask and scale and squeeze w/ .tif files\n",
@@ -451,6 +449,24 @@
     "\n",
     "# Plot Sheyenne National Grasslands on sheyenne_soil_da\n",
     "caddo_grasslands_gdf.to_crs(caddo_merged_das.rio.crs).boundary.plot(ax = plt.gca(), color='black')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'sheyenne_soil_dir' (str)\n",
+      "Stored 'caddo_soil_dir' (str)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%store sheyenne_soil_dir caddo_soil_dir"
    ]
   },
   {
