renamed merged da variable

--- a/01-habitat-suitability-soil.ipynb
+++ b/01-habitat-suitability-soil.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "'C:\\\\Users\\\\riede\\\\earth-analytics\\\\data\\\\habitat-suitability\\\\soil-ph\\\\*.tif'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        " np.float64(46.57204154162918))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "'http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat{min_lat}{max_lat}_lon{min_lon}{max_lon}.tif'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
        "<Axes: title={'center': 'band = 1, spatial_ref = 0'}, xlabel='x', ylabel='y'>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -366,11 +366,11 @@
    ],
    "source": [
     "# Merge Sheyenne soil ph data tiles\n",
-    "sheyenne_merged_soil_ph_das = merge_arrays(sheyenne_soil_ph_das)\n",
-    "sheyenne_merged_soil_ph_das.plot()\n",
+    "sheyenne_merged_soil_ph_da = merge_arrays(sheyenne_soil_ph_das)\n",
+    "sheyenne_merged_soil_ph_da.plot()\n",
     "\n",
     "# Plot Sheyenne National Grasslands on sheyenne_merged_soil_ph_da\n",
-    "sheyenne_grasslands_gdf.to_crs(sheyenne_merged_soil_ph_das.rio.crs).boundary.plot(ax = plt.gca(), color='black')"
+    "sheyenne_grasslands_gdf.to_crs(sheyenne_merged_soil_ph_da.rio.crs).boundary.plot(ax = plt.gca(), color='black')"
    ]
   },
   {
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        " np.float64(33.80186198772292))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "'http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat{min_lat}{max_lat}_lon{min_lon}{max_lon}.tif'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
        "<Axes: title={'center': 'band = 1, spatial_ref = 0'}, xlabel='x', ylabel='y'>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -486,29 +486,29 @@
    ],
    "source": [
     "# Merge Caddo soil ph data tiles\n",
-    "caddo_merged_soil_ph_das = merge_arrays(caddo_soil_ph_das)\n",
-    "caddo_merged_soil_ph_das.plot()\n",
+    "caddo_merged_soil_ph_da = merge_arrays(caddo_soil_ph_das)\n",
+    "caddo_merged_soil_ph_da.plot()\n",
     "\n",
     "# Plot Caddo National Grasslands on caddo_merged_soil_ph_da plot\n",
-    "caddo_grasslands_gdf.to_crs(caddo_merged_soil_ph_das.rio.crs).boundary.plot(ax = plt.gca(), color='black')"
+    "caddo_grasslands_gdf.to_crs(caddo_merged_soil_ph_da.rio.crs).boundary.plot(ax = plt.gca(), color='black')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stored 'sheyenne_merged_soil_ph_das' (DataArray)\n",
-      "Stored 'caddo_merged_soil_ph_das' (DataArray)\n"
+      "Stored 'sheyenne_merged_soil_ph_da' (DataArray)\n",
+      "Stored 'caddo_merged_soil_ph_da' (DataArray)\n"
      ]
     }
    ],
    "source": [
-    "%store sheyenne_merged_soil_ph_das caddo_merged_soil_ph_das"
+    "%store sheyenne_merged_soil_ph_da caddo_merged_soil_ph_da"
    ]
   },
   {
