--- a/01-habitat-suitability-soil.ipynb
+++ b/01-habitat-suitability-soil.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "'C:\\\\Users\\\\riede\\\\earth-analytics\\\\data\\\\habitat-suitability\\\\soil-ph\\\\*.tif'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        " np.float64(46.57204154162918))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "'http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat{min_lat}{max_lat}_lon{min_lon}{max_lon}.tif'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -326,21 +326,21 @@
    ],
    "source": [
     "# Process Sheyenne soil pH DataArrays\n",
-    "sheyenne_soil_ph_das = process_soil_da(soil_ph_dir,\n",
-    "                                       sheyenne_soil_url_template,\n",
-    "                                       sheyenne_bounds[0],\n",
-    "                                       sheyenne_bounds[1],\n",
-    "                                       sheyenne_bounds[2],\n",
-    "                                       sheyenne_bounds[3],\n",
-    "                                       sheyenne_bounds[4],\n",
-    "                                       variable='ph',\n",
-    "                                       statistic='mean',\n",
-    "                                       depth='60_100')"
+    "sheyenne_soil_ph_indiv_das = process_soil_da(soil_ph_dir,\n",
+    "                                             sheyenne_soil_url_template,\n",
+    "                                             sheyenne_bounds[0],\n",
+    "                                             sheyenne_bounds[1],\n",
+    "                                             sheyenne_bounds[2],\n",
+    "                                             sheyenne_bounds[3],\n",
+    "                                             sheyenne_bounds[4],\n",
+    "                                             variable='ph',\n",
+    "                                             statistic='mean',\n",
+    "                                             depth='60_100')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
        "<Axes: title={'center': 'band = 1, spatial_ref = 0'}, xlabel='x', ylabel='y'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -366,11 +366,11 @@
    ],
    "source": [
     "# Merge Sheyenne soil ph data tiles\n",
-    "sheyenne_merged_soil_ph_da = merge_arrays(sheyenne_soil_ph_das)\n",
-    "sheyenne_merged_soil_ph_da.plot()\n",
+    "sheyenne_soil_ph_da = merge_arrays(sheyenne_soil_ph_indiv_das)\n",
+    "sheyenne_soil_ph_da.plot()\n",
     "\n",
     "# Plot Sheyenne National Grasslands on sheyenne_merged_soil_ph_da\n",
-    "sheyenne_grasslands_gdf.to_crs(sheyenne_merged_soil_ph_da.rio.crs).boundary.plot(ax = plt.gca(), color='black')"
+    "sheyenne_grasslands_gdf.to_crs(sheyenne_soil_ph_da.rio.crs).boundary.plot(ax = plt.gca(), color='black')"
    ]
   },
   {
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        " np.float64(33.80186198772292))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "'http://hydrology.cee.duke.edu/POLARIS/PROPERTIES/v1.0/ph/mean/60_100/lat{min_lat}{max_lat}_lon{min_lon}{max_lon}.tif'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -446,21 +446,21 @@
    ],
    "source": [
     "# Process Caddo soil pH DataArrays\n",
-    "caddo_soil_ph_das = process_soil_da(soil_ph_dir,\n",
-    "                                    caddo_soil_url_template,\n",
-    "                                    caddo_bounds[0],\n",
-    "                                    caddo_bounds[1],\n",
-    "                                    caddo_bounds[2],\n",
-    "                                    caddo_bounds[3],\n",
-    "                                    caddo_bounds[4],\n",
-    "                                    variable='ph',\n",
-    "                                    statistic='mean',\n",
-    "                                    depth='60_100')"
+    "caddo_soil_ph_indiv_das = process_soil_da(soil_ph_dir,\n",
+    "                                          caddo_soil_url_template,\n",
+    "                                          caddo_bounds[0],\n",
+    "                                          caddo_bounds[1],\n",
+    "                                          caddo_bounds[2],\n",
+    "                                          caddo_bounds[3],\n",
+    "                                          caddo_bounds[4],\n",
+    "                                          variable='ph',\n",
+    "                                          statistic='mean',\n",
+    "                                          depth='60_100')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
        "<Axes: title={'center': 'band = 1, spatial_ref = 0'}, xlabel='x', ylabel='y'>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -486,29 +486,29 @@
    ],
    "source": [
     "# Merge Caddo soil ph data tiles\n",
-    "caddo_merged_soil_ph_da = merge_arrays(caddo_soil_ph_das)\n",
-    "caddo_merged_soil_ph_da.plot()\n",
+    "caddo_soil_ph_da = merge_arrays(caddo_soil_ph_indiv_das)\n",
+    "caddo_soil_ph_da.plot()\n",
     "\n",
     "# Plot Caddo National Grasslands on caddo_merged_soil_ph_da plot\n",
-    "caddo_grasslands_gdf.to_crs(caddo_merged_soil_ph_da.rio.crs).boundary.plot(ax = plt.gca(), color='black')"
+    "caddo_grasslands_gdf.to_crs(caddo_soil_ph_da.rio.crs).boundary.plot(ax = plt.gca(), color='black')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stored 'sheyenne_merged_soil_ph_da' (DataArray)\n",
-      "Stored 'caddo_merged_soil_ph_da' (DataArray)\n"
+      "Stored 'sheyenne_soil_ph_da' (DataArray)\n",
+      "Stored 'caddo_soil_ph_da' (DataArray)\n"
      ]
     }
    ],
    "source": [
-    "%store sheyenne_merged_soil_ph_da caddo_merged_soil_ph_da"
+    "%store sheyenne_soil_ph_da caddo_soil_ph_da"
    ]
   },
   {
