organized notebooks into folders

--- a/OGnotebooks/function-practice.ipynb
+++ b/OGnotebooks/function-practice.ipynb
@@ -645,15 +645,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define grassland bounds\n",
-    "def define_bounds(grassland_gdf):\n",
-    "    grassland_bounds = (grassland_bounds_min_lon,\n",
-    "                        grassland_bounds_min_lat,\n",
-    "                        grassland_bounds_max_lon,\n",
-    "                        grassland_bounds_max_lat) = (\n",
-    "                        grassland_gdf\n",
-    "                        .total_bounds)\n",
-    "    return grassland_bounds, grassland_bounds_min_lon, grassland_bounds_min_lat, grassland_bounds_max_lon, grassland_bounds_max_lat"
+    "# Define site bounds\n",
+    "def define_site_bounds(site_gdf):\n",
+    "    site_bounds = (site_bounds_min_lon,\n",
+    "                   site_bounds_min_lat,\n",
+    "                   site_bounds_max_lon,\n",
+    "                   site_bounds_max_lat) = (\n",
+    "                       site_gdf\n",
+    "                       .total_bounds)\n",
+    "    return site_bounds, site_bounds_min_lon, site_bounds_min_lat, site_bounds_max_lon, site_bounds_max_lat"
    ]
   },
   {
@@ -662,22 +662,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_soil_da2(grassland_soil_dir,\n",
+    "def process_soil_da2(site_soil_dir,\n",
     "                     soil_url_template,\n",
-    "                     grassland_bounds,\n",
-    "                     grassland_bounds_min_lon,\n",
-    "                     grassland_bounds_min_lat,\n",
-    "                     grassland_bounds_max_lon,\n",
-    "                     grassland_bounds_max_lat,\n",
+    "                     site_bounds,\n",
+    "                     site_bounds_min_lon,\n",
+    "                     site_bounds_min_lat,\n",
+    "                     site_bounds_max_lon,\n",
+    "                     site_bounds_max_lat,\n",
     "                     variable='variable',\n",
     "                     statistic='statistic',\n",
     "                     depth='depth'):\n",
-    "    # List out all the grasslamd soil files we will need to download\n",
+    "    # List out all the grassland soil files we will need to download\n",
     "    grassland_soil_das = []\n",
-    "    for min_lon in range(floor(grassland_bounds_min_lon),\n",
-    "                         ceil(grassland_bounds_max_lon)):\n",
-    "        for min_lat in range(floor(grassland_bounds_min_lat),\n",
-    "                             ceil(grassland_bounds_max_lat)):\n",
+    "    for min_lon in range(floor(site_bounds_min_lon),\n",
+    "                         ceil(site_bounds_max_lon)):\n",
+    "        for min_lat in range(floor(site_bounds_min_lat),\n",
+    "                             ceil(site_bounds_max_lat)):\n",
     "            max_lon = min_lon + 1\n",
     "            max_lat = min_lat + 1\n",
     "            soil_url = soil_url_template.format(\n",
@@ -687,8 +687,8 @@
     "                max_lon=max_lon)\n",
     "            \n",
     "            # Define the file path for saving the downloaded raster data\n",
-    "            soil_path = os.path.join(grassland_soil_dir, f\"soil_{variable}_{statistic}_{depth}_lat{min_lat}{max_lat}_lon{min_lon}{max_lon}.tif\")\n",
-    "            # print(f'Soil path: {soil_path}')\n",
+    "            soil_path = os.path.join(site_soil_dir, f\"soil_{variable}_{statistic}_{depth}_lat{min_lat}{max_lat}_lon{min_lon}{max_lon}.tif\")\n",
+    "            print(f'Soil path: {soil_path}')\n",
     "\n",
     "            if not os.path.exists(soil_path):\n",
     "                # Load the raster data into Python, mask and scale and squeeze w/ .tif files\n",
@@ -708,7 +708,7 @@
     "            ).squeeze()\n",
     "\n",
     "            # Crop the raster data\n",
-    "            cropped_da = soil_da.rio.clip_box(*grassland_bounds)\n",
+    "            cropped_da = soil_da.rio.clip_box(*site_bounds)\n",
     "            grassland_soil_das.append(cropped_da)\n",
     "            print('Cropped')\n",
     "\n",
