stored matched das, fuzzy pseudocode

--- a/notebooks/05-habitat-suitability-fuzzy-model.ipynb
+++ b/notebooks/05-habitat-suitability-fuzzy-model.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%store -r data_dir\n",
-    "%store -r sheyenne_grasslands_gdf caddo_grasslands_gdf\n",
-    "%store -r sheyenne_soil_ph_da caddo_soil_ph_da\n",
-    "%store -r sheyenne_aspect_da caddo_aspect_da\n",
-    "%store -r sheyenne_45_annual_precip_da sheyenne_85_annual_precip_da\n",
-    "%store -r caddo_45_annual_precip_da caddo_85_annual_precip_da"
+    "%store -r sheyenne_aspect_matched_da \n",
+    "%store -r sheyenne_45_annual_precip_matched_da\n",
+    "%store -r sheyenne_85_annual_precip_matched_da\n",
+    "%store -r caddo_aspect_matched_da\n",
+    "%store -r caddo_45_annual_precip_matched_da\n",
+    "%store -r caddo_85_annual_precip_matched_da"
    ]
   },
   {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.10"
   }
  },
