--- a/notebooks/04-habitat-suitability-harmonize.ipynb
+++ b/notebooks/04-habitat-suitability-harmonize.ipynb
@@ -21,16 +21,9 @@
    "outputs": [],
    "source": [
     "# Import necessary packages\n",
-    "import os\n",
-    "import pathlib\n",
-    "from math import floor, ceil\n",
-    "\n",
-    "from glob import glob\n",
-    "import pandas as pd # Aggregating and data manipulation\n",
     "import matplotlib.pyplot as plt # Overlay pandas and xarray plots\n",
     "import rioxarray as rxr # Work with raster data\n",
-    "import xarray as xr\n",
-    "from rioxarray.merge import merge_arrays # Merge rasters"
+    "import xarray as xr"
    ]
   },
   {
