tried to add cng plot again

--- a/habitat-suitability-notebooks/06-habitat-suitabilty-written-analysis.ipynb
+++ b/habitat-suitability-notebooks/06-habitat-suitabilty-written-analysis.ipynb
@@ -32,7 +32,7 @@
     "### Caddo National Grasslands:\n",
     "Caddo National Grasslands is mainly in Texas, USA, although a small portion of it is in Oklahoma too. It includes two units: Bois d' Arc Creek Unit (13,360 acres) and Ladonia Unit (2,780 acres)<sup>2</sup> and 3 lakes: Lake Coffee Mill (651 acres), Lake Crockett (388 acres), and Lake Fannin (45 acres)<sup>1</sup>. In the Caddo Grasslands, several recreational activities are available such as camping, picnicking, and fishing.<sup>1</sup> The Caddo is also home to wildlife such as coyotes, waterfowl, turkey, largemouth bass, and sunfish.<sup>1</sup>\n",
     "\n",
-    "<img src=\"/habitat-suitability/cng_plot.png\" alt=\"Blue Plot of Caddo National Grasslands on latitude and longitude axes\" width=\"25%\"/>"
+    "<img src=\"C:\\Users\\riede\\Documents\\Fall 2024 Earth Data Analytics Class\\habitat-suitability\\habitat-suitability-notebooks\\habitat-suitability-plots\\cng_plot.png\" alt=\"Blue Plot of Caddo National Grasslands on latitude and longitude axes\" width=\"25%\"/>"
    ]
   },
   {
